objects/vlocity_cmt__CustomerInteractionTopic__c.object
<CustomObject>
    <description>A topic discussed or addressed during a customer interaction such as a customer account, a customer asset, a quote or a case. A topic could even be a specific field or aspect of an object such as a charge on a bill or a co-pay on a health insurance coverage.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerInteractionId__c</fullName>
        <label>Customer Interaction</label>
        <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Interaction Topic</label>
    <nameField>
        <label>Customer Interaction Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interaction Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>